--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -112,10 +112,10 @@ CurrentPosGridSize=3
 LastLevel=/Game/Maps/Level1
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=3.357 Y=130.909
+ScreenPosition=X=202.741 Y=131.580
 WindowSize=X=1278.210 Y=718.993
 InitiallyMaximized=True
 
@@ -145,7 +145,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/RoomFolder
+ContentBrowserTab1.SelectedPaths=/Game/Maps
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2327,7 +2327,7 @@ Test_C=
 LevelScriptActor=
 Room1_C=
 CameraActor=
-Door_C="\"Object.min\" \"Object.min\" "
+Door_C=
 Room1_Child_C=
 Room2_C=
 S_C=
@@ -2342,22 +2342,22 @@ N_C=
 [ContentBrowserRecent]
 MRUItem0=/Game/Maps/Level1
 MRUItem1=/Game/Maps/Test
-MRUItem2=/Game/Blueprints/RoomFolder/Level1/E
-MRUItem3=/Game/Blueprints/RoomFolder/N
-MRUItem4=/Game/Blueprints/RoomFolder/E
-MRUItem5=/Game/Blueprints/RoomFolder/ZERO
-MRUItem6=/Game/Blueprints/RoomFolder/S
-MRUItem7=/Game/Blueprints/RoomFolder/W
-MRUItem8=/Game/Blueprints/RoomFolder/NS
-MRUItem9=/Game/Blueprints/RoomFolder/SE
-MRUItem10=/Game/Blueprints/RoomFolder/NWS
-MRUItem11=/Game/Blueprints/RoomFolder/Room1_Child1
-MRUItem12=/Game/Blueprints/RoomFolder/Room1
-MRUItem13=/Game/Blueprints/RoomFolder/Room1_Child
-MRUItem14=/Game/Blueprints/RoomFolder/Room2
-MRUItem15=/Game/Blueprints/Projectile
-MRUItem16=/Game/Blueprints/TwinStickMode
-MRUItem17=/Game/Blueprints/RoomFolder/Door
+MRUItem2=/Game/Blueprints/RoomFolder/Room1
+MRUItem3=/Game/Blueprints/RoomFolder/Door
+MRUItem4=/Game/Blueprints/RoomFolder/Level1/E
+MRUItem5=/Game/Blueprints/RoomFolder/N
+MRUItem6=/Game/Blueprints/RoomFolder/E
+MRUItem7=/Game/Blueprints/RoomFolder/ZERO
+MRUItem8=/Game/Blueprints/RoomFolder/S
+MRUItem9=/Game/Blueprints/RoomFolder/W
+MRUItem10=/Game/Blueprints/RoomFolder/NS
+MRUItem11=/Game/Blueprints/RoomFolder/SE
+MRUItem12=/Game/Blueprints/RoomFolder/NWS
+MRUItem13=/Game/Blueprints/RoomFolder/Room1_Child1
+MRUItem14=/Game/Blueprints/RoomFolder/Room1_Child
+MRUItem15=/Game/Blueprints/RoomFolder/Room2
+MRUItem16=/Game/Blueprints/Projectile
+MRUItem17=/Game/Blueprints/TwinStickMode
 MRUItem18=/Game/Blueprints/EnemyCharacter
 MRUItem19=/Game/Blueprints/EnemySpawner
 
@@ -2410,6 +2410,8 @@ MRUItem19=/Game/Blueprints/EnemySpawner
 /Game/Blueprints/RoomFolder/Level1/E.E=0
 /Game/Blueprints/RoomFolder/Level1/N.N=0
 /Game/Maps/Test.Test:PersistentLevel.Test=1
+/Game/Blueprints/RoomFolder/Door.Door=1
+/Game/Maps/Level1.Level1:PersistentLevel.Level1=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -2420,17 +2422,17 @@ Contexts=(Name="AnimationBlueprintEditor",Commands=)
 Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/RoomFolder/E.E;
-RecentlyPlaced=/Game/Blueprints/RoomFolder/W.W;
-RecentlyPlaced=/Game/Blueprints/RoomFolder/N.N;
+RecentlyPlaced=/Game/Blueprints/RoomFolder/Level1/ZERO.ZERO;
+RecentlyPlaced=/Game/Blueprints/RoomFolder/Level1/E.E;
+RecentlyPlaced=/Game/Blueprints/RoomFolder/Level1/W.W;
+RecentlyPlaced=/Game/Blueprints/RoomFolder/Level1/N.N;
 RecentlyPlaced=/Game/Blueprints/RoomFolder/Room1.Room1;
-RecentlyPlaced=/Game/Blueprints/RoomFolder/ZERO.ZERO;
-RecentlyPlaced=/Game/Blueprints/RoomFolder/NS.NS;
-RecentlyPlaced=/Game/Blueprints/RoomFolder/SE.SE;
-RecentlyPlaced=/Game/Blueprints/RoomFolder/NWS.NWS;
-RecentlyPlaced=/Game/Blueprints/RoomFolder/NE.NE;
-RecentlyPlaced=/Game/Blueprints/RoomFolder/S.S;
-RecentlyPlaced=/Game/Blueprints/RoomFolder/NES.NES;
+RecentlyPlaced=/Game/Blueprints/RoomFolder/Level1/NS.NS;
+RecentlyPlaced=/Game/Blueprints/RoomFolder/Level1/SE.SE;
+RecentlyPlaced=/Game/Blueprints/RoomFolder/Level1/NWS.NWS;
+RecentlyPlaced=/Game/Blueprints/RoomFolder/Level1/NE.NE;
+RecentlyPlaced=/Game/Blueprints/RoomFolder/Level1/S.S;
+RecentlyPlaced=/Game/Blueprints/RoomFolder/Level1/NES.NES;
 RecentlyPlaced=/Game/Blueprints/RoomFolder/Room2.Room2;
 RecentlyPlaced=/Game/Blueprints/RoomFolder/Door.Door;
 RecentlyPlaced=/Game/Blueprints/EnemyCharacter.EnemyCharacter;
