--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -109,13 +109,13 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=3
 
 [EditorStartup]
-LastLevel=/Game/Maps/Level1
+LastLevel=/Game/Maps/MainMenu
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
-ScreenPosition=X=202.741 Y=131.580
+ScreenPosition=X=202.070 Y=130.909
 WindowSize=X=1278.210 Y=718.993
 InitiallyMaximized=True
 
@@ -145,7 +145,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2122,12 +2122,62 @@ Level1_C.Tick=True
 Level1_C.Replication=True
 Level1_C.Actor=True
 Level1_C.Input=True
+Health_C.Tick=True
+Health_C.Rendering=True
+Health_C.Replication=True
+Health_C.Actor=True
+Health_C.Input=True
+REINST_HeroCharacter_C_187.None=True
+REINST_HeroCharacter_C_187.Tick=True
+REINST_HeroCharacter_C_187.Character=True
+REINST_HeroCharacter_C_187.Camera=True
+REINST_HeroCharacter_C_187.Pawn=True
+REINST_HeroCharacter_C_187.Rendering=True
+REINST_HeroCharacter_C_187.Replication=True
+REINST_HeroCharacter_C_187.Actor=True
+REINST_HeroCharacter_C_187.Input=True
+REINST_HeroCharacter_C_187.BaseCharacter=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+SizeBox.Layout=True
+SizeBox.Child Layout=True
+SizeBox.Behavior=True
+SizeBox.Render Transform=True
+SizeBox.Performance=True
+SizeBox.Clipping=True
+SizeBox.Navigation=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Events=True
+Options_C.Appearance=True
+Options_C.Input=True
+Options_C.Interaction=True
+Options_C.Performance=True
+Options_C.Behavior=True
+Options_C.Render Transform=True
+Options_C.Navigation=True
+Options_C.Clipping=True
+MainMenu_C.Tick=True
+MainMenu_C.Replication=True
+MainMenu_C.Actor=True
+MainMenu_C.Input=True
 
 [MRU]
-MRUItem0=/Game/Maps/Level1
-MRUItem1=/Game/Maps/Test
-MRUItem2=/Game/Maps/ArenaMap
-MRUItem3=/Game/Maps/SqaureMap
+MRUItem0=/Game/Maps/MainMenu
+MRUItem1=/Game/Maps/Level1
+MRUItem2=/Game/Maps/Test
+MRUItem3=/Game/Maps/ArenaMap
+MRUItem4=/Game/Maps/SqaureMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -2250,6 +2300,8 @@ NS_C=K2Node_VariableGet.DefaultValueCategory.None,
 W_C=K2Node_VariableGet.DefaultValueCategory.None,
 E_C=K2Node_VariableGet.DefaultValueCategory.None,
 N_C=K2Node_VariableGet.DefaultValueCategory.None,
+PlayerController=K2Node_VariableGet.DefaultValueCategory.None,
+MainMenu_C=K2Node_VariableGet.DefaultValueCategory.None,
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2291,9 +2343,9 @@ SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.Respons
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 HeroCharacter_C="\"Object.Actor.Tags\" "
-BaseCharacter=
-Character=
-Pawn=
+BaseCharacter="\"Object.Actor.Tags\" "
+Character="\"Object.Actor.Tags\" "
+Pawn="\"Object.Actor.Tags\" "
 REINST_HeroCharacter_C_364="\"Object.Actor.Tags\" "
 EnemyCharacter_C=
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
@@ -2338,28 +2390,34 @@ NS_C="\"Object.North\" \"Object.North\" "
 W_C=
 E_C=
 N_C=
+REINST_HeroCharacter_C_187="\"Object.Actor.Tags\" "
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+Button="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
+ContentWidget="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
+PanelWidget=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Level1
-MRUItem1=/Game/Maps/Test
-MRUItem2=/Game/Blueprints/RoomFolder/Room1
-MRUItem3=/Game/Blueprints/RoomFolder/Door
-MRUItem4=/Game/Blueprints/RoomFolder/Level1/E
-MRUItem5=/Game/Blueprints/RoomFolder/N
-MRUItem6=/Game/Blueprints/RoomFolder/E
-MRUItem7=/Game/Blueprints/RoomFolder/ZERO
-MRUItem8=/Game/Blueprints/RoomFolder/S
-MRUItem9=/Game/Blueprints/RoomFolder/W
-MRUItem10=/Game/Blueprints/RoomFolder/NS
-MRUItem11=/Game/Blueprints/RoomFolder/SE
-MRUItem12=/Game/Blueprints/RoomFolder/NWS
-MRUItem13=/Game/Blueprints/RoomFolder/Room1_Child1
-MRUItem14=/Game/Blueprints/RoomFolder/Room1_Child
-MRUItem15=/Game/Blueprints/RoomFolder/Room2
-MRUItem16=/Game/Blueprints/Projectile
-MRUItem17=/Game/Blueprints/TwinStickMode
-MRUItem18=/Game/Blueprints/EnemyCharacter
-MRUItem19=/Game/Blueprints/EnemySpawner
+MRUItem0=/Game/Maps/MainMenu
+MRUItem1=/Game/Blueprints/HeroCharacter
+MRUItem2=/Game/Maps/Level1
+MRUItem3=/Game/Blueprints/TwinStickMode
+MRUItem4=/Game/Blueprints/TwinStickHUD
+MRUItem5=/Game/Blueprints/UI/TwinStickHUD
+MRUItem6=/Game/Blueprints/UI/Options
+MRUItem7=/Game/Blueprints/UI/MainMenu
+MRUItem8=/Game/Blueprints/Interactables/Weapons/BP_BaseGunPickup
+MRUItem9=/Game/Blueprints/Interactables/Health
+MRUItem10=/Game/Blueprints/Interactables/BP_BaseInteractable
+MRUItem11=/Game/Blueprints/RoomFolder/Room1
+MRUItem12=/Game/Blueprints/RoomFolder/Level1/E
+MRUItem13=/Game/Maps/Test
+MRUItem14=/Game/Blueprints/RoomFolder/Door
+MRUItem15=/Game/Blueprints/RoomFolder/N
+MRUItem16=/Game/Blueprints/RoomFolder/E
+MRUItem17=/Game/Blueprints/RoomFolder/ZERO
+MRUItem18=/Game/Blueprints/RoomFolder/S
+MRUItem19=/Game/Blueprints/RoomFolder/W
 
 [AssetEditorToolkitTabLocation]
 /Game/AnimationAssets/Jog_Lt_Rifle.Jog_Lt_Rifle=0
@@ -2412,6 +2470,7 @@ MRUItem19=/Game/Blueprints/EnemySpawner
 /Game/Maps/Test.Test:PersistentLevel.Test=1
 /Game/Blueprints/RoomFolder/Door.Door=1
 /Game/Maps/Level1.Level1:PersistentLevel.Level1=1
+/Game/Blueprints/UI/Options.Options=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -2524,11 +2583,12 @@ Extra=False
 Input=False
 Lists=False
 Optimization=False
-Panel=True
+Panel=False
 Primitive=False
 Special Effects=False
 Uncategorized=False
 User Created=False
+Common=False
 
 [UMGEditor.Designer]
 PreviewWidth=1280
