Preparing for manual merge

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -2124,6 +2124,120 @@ REINST_EnemyCharacter_C_454.Actor=True
 REINST_EnemyCharacter_C_454.Input=True
 REINST_EnemyCharacter_C_454.None=True
 REINST_EnemyCharacter_C_454.BaseCharacter=True
+CameraActor.TransformCommon=True
+CameraActor.CameraSettings=True
+CameraActor.CameraOptions=True
+CameraActor.Lens=True
+CameraActor.Color Grading=True
+CameraActor.Film=True
+CameraActor.Mobile Tonemapper=True
+CameraActor.Rendering Features=True
+CameraActor.AutoPlayerActivation=True
+CameraActor.Tags=True
+CameraActor.Activation=True
+CameraActor.Cooking=True
+CameraActor.Replication=True
+CameraActor.Actor=True
+HeroCharacter_C.Default=True
+K2Node_InputAction.Input=True
+REINST_EnemyAi_C_236.Tick=True
+REINST_EnemyAi_C_236.AI=True
+REINST_EnemyAi_C_236.Controller=True
+REINST_EnemyAi_C_236.Rendering=True
+REINST_EnemyAi_C_236.Replication=True
+REINST_EnemyAi_C_236.Actor=True
+REINST_EnemyAi_C_236.Input=True
+REINST_EnemyAi_C_236.None=True
+REINST_EnemyAi_C_106.Tick=True
+REINST_EnemyAi_C_106.AI=True
+REINST_EnemyAi_C_106.Controller=True
+REINST_EnemyAi_C_106.Rendering=True
+REINST_EnemyAi_C_106.Replication=True
+REINST_EnemyAi_C_106.Actor=True
+REINST_EnemyAi_C_106.Input=True
+REINST_EnemyAi_C_106.None=True
+REINST_EnemyAi_C_122.Tick=True
+REINST_EnemyAi_C_122.AI=True
+REINST_EnemyAi_C_122.Controller=True
+REINST_EnemyAi_C_122.Rendering=True
+REINST_EnemyAi_C_122.Replication=True
+REINST_EnemyAi_C_122.Actor=True
+REINST_EnemyAi_C_122.Input=True
+REINST_EnemyAi_C_122.None=True
+Actor.Rendering=True
+Actor.Replication=True
+Actor.Input=True
+Actor.Actor=True
+REINST_EnemyCharacter_C_236.Character=True
+REINST_EnemyCharacter_C_236.Tick=True
+REINST_EnemyCharacter_C_236.Camera=True
+REINST_EnemyCharacter_C_236.Pawn=True
+REINST_EnemyCharacter_C_236.Rendering=True
+REINST_EnemyCharacter_C_236.Replication=True
+REINST_EnemyCharacter_C_236.Actor=True
+REINST_EnemyCharacter_C_236.Input=True
+REINST_EnemyCharacter_C_236.None=True
+REINST_EnemyCharacter_C_236.BaseCharacter=True
+REINST_EnemyCharacter_C_246.Character=True
+REINST_EnemyCharacter_C_246.Tick=True
+REINST_EnemyCharacter_C_246.Camera=True
+REINST_EnemyCharacter_C_246.Pawn=True
+REINST_EnemyCharacter_C_246.Rendering=True
+REINST_EnemyCharacter_C_246.Replication=True
+REINST_EnemyCharacter_C_246.Actor=True
+REINST_EnemyCharacter_C_246.Input=True
+REINST_EnemyCharacter_C_246.None=True
+REINST_EnemyCharacter_C_246.BaseCharacter=True
+REINST_EnemyCharacter_C_266.Character=True
+REINST_EnemyCharacter_C_266.Tick=True
+REINST_EnemyCharacter_C_266.Camera=True
+REINST_EnemyCharacter_C_266.Pawn=True
+REINST_EnemyCharacter_C_266.Rendering=True
+REINST_EnemyCharacter_C_266.Replication=True
+REINST_EnemyCharacter_C_266.Actor=True
+REINST_EnemyCharacter_C_266.Input=True
+REINST_EnemyCharacter_C_266.None=True
+REINST_EnemyCharacter_C_266.BaseCharacter=True
+REINST_EnemyAi_C_292.Tick=True
+REINST_EnemyAi_C_292.AI=True
+REINST_EnemyAi_C_292.Controller=True
+REINST_EnemyAi_C_292.Rendering=True
+REINST_EnemyAi_C_292.Replication=True
+REINST_EnemyAi_C_292.Actor=True
+REINST_EnemyAi_C_292.Input=True
+REINST_EnemyAi_C_292.None=True
+REINST_EnemyAi_C_296.Tick=True
+REINST_EnemyAi_C_296.AI=True
+REINST_EnemyAi_C_296.Controller=True
+REINST_EnemyAi_C_296.Rendering=True
+REINST_EnemyAi_C_296.Replication=True
+REINST_EnemyAi_C_296.Actor=True
+REINST_EnemyAi_C_296.Input=True
+REINST_EnemyAi_C_296.None=True
+REINST_EnemyAi_C_300.Tick=True
+REINST_EnemyAi_C_300.AI=True
+REINST_EnemyAi_C_300.Controller=True
+REINST_EnemyAi_C_300.Rendering=True
+REINST_EnemyAi_C_300.Replication=True
+REINST_EnemyAi_C_300.Actor=True
+REINST_EnemyAi_C_300.Input=True
+REINST_EnemyAi_C_300.None=True
+REINST_EnemyAi_C_304.Tick=True
+REINST_EnemyAi_C_304.AI=True
+REINST_EnemyAi_C_304.Controller=True
+REINST_EnemyAi_C_304.Rendering=True
+REINST_EnemyAi_C_304.Replication=True
+REINST_EnemyAi_C_304.Actor=True
+REINST_EnemyAi_C_304.Input=True
+REINST_EnemyAi_C_304.None=True
+REINST_EnemyAi_C_308.Tick=True
+REINST_EnemyAi_C_308.AI=True
+REINST_EnemyAi_C_308.Controller=True
+REINST_EnemyAi_C_308.Rendering=True
+REINST_EnemyAi_C_308.Replication=True
+REINST_EnemyAi_C_308.Actor=True
+REINST_EnemyAi_C_308.Input=True
+REINST_EnemyAi_C_308.None=True
 
 [MRU]
 MRUItem0=/Game/Maps/ArenaMap
@@ -2234,21 +2348,23 @@ K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.De
 Projectile_Enemy_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 ArrayProperty=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 StructProperty=K2Node_VariableGet.DefaultValueCategory.None,
-ObjectProperty=K2Node_VariableGet.DefaultValueCategory.None,
+ObjectProperty=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 EnemyCharacter_Patrol_C=K2Node_VariableGet.DefaultValueCategory.None,
 ByteProperty=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 EnemyAi_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 StrProperty=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
+EnemySpawner_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
+Character=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object=
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[0]\" \"Object.Bindings.AxisConfig.AxisConfig[1]\" \"Object.Bindings.AxisConfig.AxisConfig[2]\" \"Object.Bindings.AxisConfig.AxisConfig[3]\" \"Object.Bindings.AxisConfig.AxisConfig[4]\" \"Object.Bindings.AxisConfig.AxisConfig[5]\" \"Object.Bindings.AxisConfig.AxisConfig[6]\" \"Object.Bindings.AxisConfig.AxisConfig[7]\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" \"Object.Bindings.AxisConfig.AxisConfig[10]\" \"Object.Bindings.AxisConfig.AxisConfig[11]\" \"Object.Bindings.AxisConfig.AxisConfig[12]\" \"Object.Bindings.AxisConfig.AxisConfig[13]\" \"Object.Bindings.AxisConfig.AxisConfig[14]\" \"Object.Bindings.AxisConfig.AxisConfig[15]\" \"Object.Bindings.AxisConfig.AxisConfig[16]\" \"Object.Bindings.AxisConfig.AxisConfig[17]\" \"Object.Bindings.AxisConfig.AxisConfig[18]\" \"Object.Bindings.AxisConfig.AxisConfig[19]\" \"Object.Bindings.AxisConfig.AxisConfig[20]\" \"Object.Bindings.AxisConfig.AxisConfig[21]\" \"Object.Bindings.AxisConfig.AxisConfig[22]\" \"Object.Bindings.AxisMappings.AxisMappings[11]\" "
-Brush="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
 DeveloperSettings=
 AudioSettings="\"Object.Quality.QualityLevels\" \"Object.Quality.QualityLevels.QualityLevels[0]\" "
@@ -2273,7 +2389,7 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Shape.ShapeColor\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SceneComponent=
 ActorComponent=
 SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2281,11 +2397,11 @@ SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.Respons
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Shape.ShapeColor\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 HeroCharacter_C="\"Object.Actor.Tags\" "
-BaseCharacter="\"Object.isDead\" \"Object.isDead\" "
-Character="\"Object.isDead\" \"Object.isDead\" "
-Pawn="\"Object.isDead\" \"Object.isDead\" "
+BaseCharacter=
+Character=
+Pawn=
 REINST_HeroCharacter_C_364="\"Object.Actor.Tags\" "
-EnemyCharacter_C="\"Object.isDead\" \"Object.isDead\" "
+EnemyCharacter_C=
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
 Widget=
 Visual=
@@ -2326,28 +2442,29 @@ EdGraphNode="\"Object.PinOptions.PinNames\" "
 EnemyAi_C=
 AIController=
 Controller=
+EnemySpawner_C="\"Object.MaxEnemies\" \"Object.MaxEnemies\" "
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/Enemies/EnemyCharacter
 MRUItem1=/Game/Blueprints/Enemies/EnemyAi
-MRUItem2=/Game/Blueprints/Enemies/ElementalType
-MRUItem3=/Game/StarterContent/Particles/LaserSparks
-MRUItem4=/Game/Blueprints/Projectile
-MRUItem5=/Game/Blueprints/Projectile_Enemy
-MRUItem6=/Game/Maps/ArenaMap
-MRUItem7=/Game/Blueprints/EnemyCharacter_Patrol
-MRUItem8=/Game/Blueprints/EnemyPatrolAi
-MRUItem9=/Game/Blueprints/Enemies/EnemySpawner
-MRUItem10=/Game/Blueprints/Enemies/EnemyAi_Chase
-MRUItem11=/Game/Blueprints/Projectile_Patrol
-MRUItem12=/Game/Blueprints/Enemies/EnemyCharacter_Chase
-MRUItem13=/Game/Blueprints/TwinStickMode
-MRUItem14=/Game/Blueprints/EnemyCharacter
-MRUItem15=/Game/Blueprints/Interactables/BP_BaseItem
-MRUItem16=/Game/Blueprints/Interactables/BPI_Interact
-MRUItem17=/Game/Blueprints/Interactables/BP_BaseInteractable
-MRUItem18=/Game/Blueprints/EnemyCharacter_Chase
-MRUItem19=/Game/Blueprints/Explosion
+MRUItem2=/Game/Blueprints/Enemies/EnemySpawner
+MRUItem3=/Game/Maps/ArenaMap
+MRUItem4=/Game/Blueprints/HeroCharacter
+MRUItem5=/Game/Blueprints/Enemies/ElementalType
+MRUItem6=/Game/StarterContent/Particles/LaserSparks
+MRUItem7=/Game/Blueprints/Projectile
+MRUItem8=/Game/Blueprints/Projectile_Enemy
+MRUItem9=/Game/Blueprints/EnemyCharacter_Patrol
+MRUItem10=/Game/Blueprints/EnemyPatrolAi
+MRUItem11=/Game/Blueprints/Enemies/EnemyAi_Chase
+MRUItem12=/Game/Blueprints/Projectile_Patrol
+MRUItem13=/Game/Blueprints/Enemies/EnemyCharacter_Chase
+MRUItem14=/Game/Blueprints/TwinStickMode
+MRUItem15=/Game/Blueprints/EnemyCharacter
+MRUItem16=/Game/Blueprints/Interactables/BP_BaseItem
+MRUItem17=/Game/Blueprints/Interactables/BPI_Interact
+MRUItem18=/Game/Blueprints/Interactables/BP_BaseInteractable
+MRUItem19=/Game/Blueprints/EnemyCharacter_Chase
 
 [AssetEditorToolkitTabLocation]
 /Game/AnimationAssets/Jog_Lt_Rifle.Jog_Lt_Rifle=0
@@ -2404,6 +2521,7 @@ Contexts=(Name="AnimationBlueprintEditor",Commands=)
 Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/Explosion.Explosion;
 RecentlyPlaced=/Game/Blueprints/EnemySpawner.EnemySpawner;
