Created Turret, Fixed Magic Numbers
Use Grid Locations

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -85,7 +85,7 @@ LastExecutedLaunchName=DESKTOP-88BU2NU
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowPosition=(X=155,Y=53)
+NewWindowPosition=(X=315,Y=143)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -109,11 +109,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentScalingGridSize=6
 
 [EditorStartup]
-LastLevel=/Game/Maps/Lev
+LastLevel=/Game/Maps/ArenaMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Rooms/Room1.Room1
 
 [RootWindow]
 ScreenPosition=X=1076.000 Y=150.000
@@ -146,7 +145,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Meshes
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/SpreadSheet_Interaction/Rooms
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -202,7 +201,7 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [Directories2]
-UNR=../../../../../../Users/Leehe/Documents/Unreal Projects/CAP4053/Content/Maps
+UNR=../../../../../Documents/Unreal Projects/CAP4053/Content/Maps
 BRUSH=../../../../../../Users/Matthew Kurtz/Documents/Unreal Projects/TwinStickShooter/Content/
 FBX=../../../../../../Users/Matthew Kurtz/Documents/Unreal Projects/TwinStickShooter/Content/
 FBXAnim=../../../../../../Users/Matthew Kurtz/Documents/Unreal Projects/TwinStickShooter/Content/
@@ -872,6 +871,8 @@ MeshBuilder.TimeStamp=2019.03.30-01.25.14
 MeshBuilder.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2019.03.30-01.25.19
 StaticMeshEditor.LastCompileMethod=Unknown
+DataTableEditor.TimeStamp=2019.01.25-16.01.40
+DataTableEditor.LastCompileMethod=Unknown
 
 [DetailCategories]
 PaintBrushSettings.Brush=True
@@ -2289,11 +2290,118 @@ BP_BaseItem_C.TransformCommon=True
 NS_C.TransformCommon=True
 W_C.TransformCommon=True
 N_C.TransformCommon=True
+REINST_EnemyCharacter_C_83.Character=True
+REINST_EnemyCharacter_C_83.Tick=True
+REINST_EnemyCharacter_C_83.Camera=True
+REINST_EnemyCharacter_C_83.Pawn=True
+REINST_EnemyCharacter_C_83.Rendering=True
+REINST_EnemyCharacter_C_83.Replication=True
+REINST_EnemyCharacter_C_83.Actor=True
+REINST_EnemyCharacter_C_83.Input=True
+REINST_EnemyCharacter_C_83.None=True
+REINST_EnemyCharacter_C_83.BaseCharacter=True
+REINST_EnemyAi_C_87.Tick=True
+REINST_EnemyAi_C_87.AI=True
+REINST_EnemyAi_C_87.Controller=True
+REINST_EnemyAi_C_87.Rendering=True
+REINST_EnemyAi_C_87.Replication=True
+REINST_EnemyAi_C_87.Actor=True
+REINST_EnemyAi_C_87.Input=True
+REINST_EnemyAi_C_87.None=True
+Room_C.Tick=True
+Room_C.Default=True
+Room_C.Rendering=True
+Room_C.Replication=True
+Room_C.Actor=True
+Room_C.Input=True
+FRoomLayout.None=True
+REINST_EnemyAi_C_185.Tick=True
+REINST_EnemyAi_C_185.AI=True
+REINST_EnemyAi_C_185.Controller=True
+REINST_EnemyAi_C_185.Rendering=True
+REINST_EnemyAi_C_185.Replication=True
+REINST_EnemyAi_C_185.Actor=True
+REINST_EnemyAi_C_185.Input=True
+REINST_EnemyAi_C_185.None=True
+REINST_EnemyAi_C_197.Tick=True
+REINST_EnemyAi_C_197.AI=True
+REINST_EnemyAi_C_197.Controller=True
+REINST_EnemyAi_C_197.Rendering=True
+REINST_EnemyAi_C_197.Replication=True
+REINST_EnemyAi_C_197.Actor=True
+REINST_EnemyAi_C_197.Input=True
+REINST_EnemyAi_C_197.None=True
+REINST_EnemyCharacter_C_227.Character=True
+REINST_EnemyCharacter_C_227.Tick=True
+REINST_EnemyCharacter_C_227.Camera=True
+REINST_EnemyCharacter_C_227.Pawn=True
+REINST_EnemyCharacter_C_227.Rendering=True
+REINST_EnemyCharacter_C_227.Replication=True
+REINST_EnemyCharacter_C_227.Actor=True
+REINST_EnemyCharacter_C_227.Input=True
+REINST_EnemyCharacter_C_227.None=True
+REINST_EnemyCharacter_C_227.BaseCharacter=True
+FItemInfo.None=True
+REINST_EnemyCharacter_C_343.Character=True
+REINST_EnemyCharacter_C_343.Tick=True
+REINST_EnemyCharacter_C_343.Camera=True
+REINST_EnemyCharacter_C_343.Pawn=True
+REINST_EnemyCharacter_C_343.Rendering=True
+REINST_EnemyCharacter_C_343.Replication=True
+REINST_EnemyCharacter_C_343.Actor=True
+REINST_EnemyCharacter_C_343.Input=True
+REINST_EnemyCharacter_C_343.None=True
+REINST_EnemyCharacter_C_343.BaseCharacter=True
+REINST_EnemyCharacter_C_357.Character=True
+REINST_EnemyCharacter_C_357.Tick=True
+REINST_EnemyCharacter_C_357.Camera=True
+REINST_EnemyCharacter_C_357.Pawn=True
+REINST_EnemyCharacter_C_357.Rendering=True
+REINST_EnemyCharacter_C_357.Replication=True
+REINST_EnemyCharacter_C_357.Actor=True
+REINST_EnemyCharacter_C_357.Input=True
+REINST_EnemyCharacter_C_357.None=True
+REINST_EnemyCharacter_C_357.BaseCharacter=True
+REINST_EnemyCharacter_C_371.Character=True
+REINST_EnemyCharacter_C_371.Tick=True
+REINST_EnemyCharacter_C_371.Camera=True
+REINST_EnemyCharacter_C_371.Pawn=True
+REINST_EnemyCharacter_C_371.Rendering=True
+REINST_EnemyCharacter_C_371.Replication=True
+REINST_EnemyCharacter_C_371.Actor=True
+REINST_EnemyCharacter_C_371.Input=True
+REINST_EnemyCharacter_C_371.None=True
+REINST_EnemyCharacter_C_371.BaseCharacter=True
+Generic.None=True
+REINST_EnemyAi_C_417.Tick=True
+REINST_EnemyAi_C_417.AI=True
+REINST_EnemyAi_C_417.Controller=True
+REINST_EnemyAi_C_417.Rendering=True
+REINST_EnemyAi_C_417.Replication=True
+REINST_EnemyAi_C_417.Actor=True
+REINST_EnemyAi_C_417.Input=True
+REINST_EnemyAi_C_417.None=True
+REINST_EnemyAi_C_447.Tick=True
+REINST_EnemyAi_C_447.AI=True
+REINST_EnemyAi_C_447.Controller=True
+REINST_EnemyAi_C_447.Rendering=True
+REINST_EnemyAi_C_447.Replication=True
+REINST_EnemyAi_C_447.Actor=True
+REINST_EnemyAi_C_447.Input=True
+REINST_EnemyAi_C_447.None=True
+REINST_EnemyAi_C_451.Tick=True
+REINST_EnemyAi_C_451.AI=True
+REINST_EnemyAi_C_451.Controller=True
+REINST_EnemyAi_C_451.Rendering=True
+REINST_EnemyAi_C_451.Replication=True
+REINST_EnemyAi_C_451.Actor=True
+REINST_EnemyAi_C_451.Input=True
+REINST_EnemyAi_C_451.None=True
 
 [MRU]
-MRUItem0=/Game/Maps/Lev
+MRUItem0=/Game/Maps/ArenaMap
 MRUItem1=/Game/Maps/Level1
-MRUItem2=/Game/Maps/ArenaMap
+MRUItem2=/Game/Maps/Lev
 MRUItem3=/Game/Maps/MainMenu
 MRUItem4=/Game/Maps/SqaureMap
 
@@ -2404,11 +2512,11 @@ IntProperty=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultV
 HeroCharacter_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 Projectile_Homing2_C=K2Node_VariableGet.DefaultValueCategory.None,
 ProjectileMovementComponent=K2Node_VariableGet.DefaultValueCategory.None,
-FloatProperty=K2Node_VariableGet.DefaultValueCategory.None,
+FloatProperty=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 MainMenu_C=K2Node_VariableGet.DefaultValueCategory.None,
 PlayerController=K2Node_VariableGet.DefaultValueCategory.None,
 EnemySpawner_C=K2Node_VariableGet.DefaultValueCategory.None,
-EnemyAi_C=K2Node_VariableGet.DefaultValueCategory.None,
+EnemyAi_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 StructProperty=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 BP_ChargeShotPickup_C=K2Node_VariableGet.DefaultValueCategory.None,
 BP_HomingMissilePickup_C=K2Node_VariableGet.DefaultValueCategory.None,
@@ -2423,6 +2531,8 @@ K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 BP_BaseItem_Child_C=K2Node_VariableGet.DefaultValueCategory.None,
 BoolProperty=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 ByteProperty=K2Node_VariableGet.DefaultValueCategory.None,
+Room_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
+Character=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2512,28 +2622,29 @@ BP_HomingMissilePickup_C="\"Object.Actor.Tags\" "
 BP_TridentShotPickup_C="\"Object.Actor.Tags\" "
 BP_ChargeShotPickup_C="\"Object.Actor.Tags\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" "
+FRoomLayout="\"Struct.Layout_4_B4D4C5F64BBB83186BC8D9AB411D3CB0\" \"Struct.Layout_4_B4D4C5F64BBB83186BC8D9AB411D3CB0.Layout_4_B4D4C5F64BBB83186BC8D9AB411D3CB0[0]\" \"Struct.Layout_4_B4D4C5F64BBB83186BC8D9AB411D3CB0.Layout_4_B4D4C5F64BBB83186BC8D9AB411D3CB0[1]\" \"Struct.Layout_4_B4D4C5F64BBB83186BC8D9AB411D3CB0.Layout_4_B4D4C5F64BBB83186BC8D9AB411D3CB0[2]\" \"Struct.Layout_4_B4D4C5F64BBB83186BC8D9AB411D3CB0.Layout_4_B4D4C5F64BBB83186BC8D9AB411D3CB0[3]\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Meshes/StaticMesh1
-MRUItem1=/Game/Meshes/StaticMesh
-MRUItem2=/Game/Meshes/StaticMesh4
-MRUItem3=/Game/Blueprints/Rooms/Room1
-MRUItem4=/Game/Meshes/StaticMesh3
-MRUItem5=/Game/Blueprints/Rooms/Door
-MRUItem6=/Game/Blueprints/Rooms/newRoom1
-MRUItem7=/Game/Meshes/StaticMesh6
-MRUItem8=/Game/Meshes/StaticMesh5
-MRUItem9=/Game/Meshes/StaticMesh2
-MRUItem10=/Game/MultistoryDungeons/Materials/Base_01_Inst
-MRUItem11=/Game/Maps/Lev
-MRUItem12=/Game/Maps/Level1
-MRUItem13=/Game/Maps/ArenaMap
-MRUItem14=/Game/Blueprints/HeroCharacter
-MRUItem15=/Game/Blueprints/Weapons/Projectile_Homing2
-MRUItem16=/Game/Blueprints/TwinStickMode
-MRUItem17=/Game/Blueprints/Enemies/EnemySpawner
-MRUItem18=/Game/Blueprints/Weapons/Projectile_Enemy
-MRUItem19=/Game/Blueprints/Enemies/EnemyAi
+MRUItem0=/Game/Blueprints/SpreadSheet_Interaction/Rooms/DT_RoomLayouts
+MRUItem1=/Game/Blueprints/Enemies/EnemyAi
+MRUItem2=/Game/Blueprints/Enemies/EnemyCharacter
+MRUItem3=/Game/Blueprints/SpreadSheet_Interaction/Items/DT_Items
+MRUItem4=/Game/Maps/ArenaMap
+MRUItem5=/Game/Maps/Level1
+MRUItem6=/Game/Blueprints/Rooms/Room
+MRUItem7=/Game/Blueprints/SpreadSheet_Interaction/Rooms/EGridTileType
+MRUItem8=/Game/Blueprints/Enemies/EnemyType
+MRUItem9=/Game/Meshes/StaticMesh1
+MRUItem10=/Game/Meshes/StaticMesh
+MRUItem11=/Game/Meshes/StaticMesh4
+MRUItem12=/Game/Blueprints/Rooms/Room1
+MRUItem13=/Game/Meshes/StaticMesh3
+MRUItem14=/Game/Blueprints/Rooms/Door
+MRUItem15=/Game/Blueprints/Rooms/newRoom1
+MRUItem16=/Game/Meshes/StaticMesh6
+MRUItem17=/Game/Meshes/StaticMesh5
+MRUItem18=/Game/Meshes/StaticMesh2
+MRUItem19=/Game/MultistoryDungeons/Materials/Base_01_Inst
 
 [AssetEditorToolkitTabLocation]
 /Game/AnimationAssets/Jog_Lt_Rifle.Jog_Lt_Rifle=0
@@ -2621,6 +2732,10 @@ MRUItem19=/Game/Blueprints/Enemies/EnemyAi
 /Game/Blueprints/Rooms/Door.Door=1
 /Game/Meshes/StaticMesh4.StaticMesh4=1
 /Game/Meshes/StaticMesh.StaticMesh=1
+/Game/Blueprints/SpreadSheet_Interaction/Rooms/EGridTileType.EGridTileType=1
+/Game/Blueprints/Rooms/Room.Room=1
+/Game/Blueprints/SpreadSheet_Interaction/Rooms/DT_RoomLayouts.DT_RoomLayouts=1
+/Game/Blueprints/SpreadSheet_Interaction/Items/DT_Items.DT_Items=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -2631,6 +2746,7 @@ Contexts=(Name="AnimationBlueprintEditor",Commands=)
 Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Enemies/EnemyCharacter.EnemyCharacter;
 RecentlyPlaced=/Game/Blueprints/Rooms/Level1/E.E;
 RecentlyPlaced=/Game/Blueprints/Rooms/Level1/W.W;
 RecentlyPlaced=/Game/Blueprints/Rooms/Level1/N.N;
@@ -2650,7 +2766,6 @@ RecentlyPlaced=/Game/MultistoryDungeons/Meshes/Wall_Corner_Preset_04.Wall_Corner
 RecentlyPlaced=/Game/MultistoryDungeons/Meshes/Wall_Corner_Preset_03.Wall_Corner_Preset_03;
 RecentlyPlaced=/Game/MultistoryDungeons/Meshes/Wall_Corner_Preset_02.Wall_Corner_Preset_02;
 RecentlyPlaced=/Game/MultistoryDungeons/Meshes/Wall_Corner_Preset_01.Wall_Corner_Preset_01;
-RecentlyPlaced=/Game/MultistoryDungeons/Meshes/Arch_01.Arch_01;
 
 [MaterialEditor]
 PrimType=1
